--- a/styles.scss
+++ b/styles.scss
@@ -15,7 +15,7 @@ body {
 }
 
 .main-div {
-  // background-image: url('/img/arcade-machine-background.jpg');
+  background-image: url('/img/arcade-machine-background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-color: black;
@@ -42,7 +42,7 @@ body {
   height: 235px;
   top: 246px;
   left: 172px;
-  // background-image: url('/img/background.jpg');
+  background-image: url('/img/background.jpg');
   border: 1px solid white;
   background-size: cover;
   background-repeat: no-repeat;
